@@ -1,7 +1,9 @@
 ﻿[B]Changelog[/B]
-* Added: recent shows for the past days to the NPO channel (Fixes #990)
+* Changed: Moved `recent` items to own folder
+* Added: use Widevine for Live streams if possible (so we have subtitles)
 
 [I]Previous Changes[/I]
+* Added: recent shows for the past days to the NPO channel (Fixes #990)
 * Fixed: NPO live channels (Fixes #978)
 * Fixed: NPO regex issue (Fixes #975)
 * Fixed: npostart.nl url parameters are case sensitive (Fixes #971)
